# adal79

./: .clang-format  CMakeLists.txt  README.md
extlibs/: CMakeLists.txt
extlibs/fmt/: CMakeLists.txt
extlibs/sdl3/: CMakeLists.txt
extlibs/sdl3_image/: CMakeLists.txt
extlibs/sdl3_ttf/: CMakeLists.txt
include/adal79/: adal79.h  adal79.hpp  adl79_core.hpp  adl79_define.hpp  adl79_ecs.hpp  adl79_graphic.hpp  adl79_pch.hpp  adl79_system.hpp  component.h  engine.h  math.h  physics.h  registry.h  scene.h  system.h
include/adal79/core/: adl79_engine.hpp  adl79_mem_tracker.hpp  adl79_renderer.hpp  adl79_sdl_renderer.hpp
include/adal79/ecs/: adl79_animation_system.hpp  adl79_component.hpp  adl79_entity.hpp  adl79_physics_system.hpp  adl79_registry.hpp  adl79_render_system.hpp  adl79_system.hpp  adl79_system_render.hpp  component.h  entity.h  registry.h
include/adal79/graphic/: adl79_asset.hpp  adl79_gfx_primitives.hpp  adl79_level.hpp  adl79_scene.hpp  adl79_texture.hpp  adl79_transform.hpp
include/adal79/graphics/: asset.h  gfx_primitives.h  renderer.h  texture.h  transform.h
scripts/: build.sh  init.sh  watch.sh
src/: adl79_file_handler.cpp  adl79_level_parser.cpp  component.cpp  engine.cpp  main.cpp  scene.cpp  system.cpp
src/core/: adl79_engine.cpp  adl79_mem_tracker.cpp  adl79_renderer.cpp  adl79_sdl_renderer.cpp
src/ecs/: adl79_animation_system.cpp  adl79_component.cpp  adl79_entity.cpp  adl79_physics_system.cpp  adl79_registry.cpp  adl79_render_system.cpp  component.cpp  entity.cpp  registry.cpp
src/graphics/: adl79_gfx_primitives.cpp  adl79_texture.cpp  gfx_primitives.cpp  renderer.cpp  texture.cpp  transform.cpp
src/system/: adl79_clock_system.cpp  adl79_texture_manager_system.cpp  asset_management_system.cpp  clock.cpp  input.cpp
src/window/: adl79_input.cpp  adl79_keyboard.cpp  adl79_window.cpp  input.cpp  window.cpp
(+30 files in other folders)
